Moved script tags to bottom of doc

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Space Program Idle</title>
-<script src="script/ui.js" type="text/javascript"></script>
-<script src="script/game.js" type="text/javascript"></script>
 <link rel="stylesheet" href="style/flex.css" type="text/css">
-<link rel="stylesheet" href="style/theme_default.css" type="text/css">
+<!--<link rel="stylesheet" href="style/theme_default.css" type="text/css">-->
 </head>
 <body class="theme_default"> <!-- Change class with code to change theme. Theme-specific style rules will use body.theme_whatever in their selectors.-->
     <section id="mainflex">
@@ -83,5 +81,7 @@
         <a href="#">Wiki</a>
         <a href="#">Reddit</a>
     </footer>
+<script src="script/game.js" type="text/javascript"></script>
+<script src="script/ui.js" type="text/javascript"></script>
 </body>
 </html>
