converted menu to use addEventListener

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body class="theme_default"> <!-- Change class with code to change theme. Theme-specific style rules will use body.theme_whatever in their selectors.-->
     <section id="mainflex">
-        <nav> <!--Feature Menu--> <!-- onclick="showTab('research');"-->
-            <button type="button" onclick="showTab('launch');" id="launchMenuButton">Mission Launch</button>
+        <nav> <!--Feature Menu-->
+            <button type="button" id="launchMenuButton">Mission Launch</button>
             <button type="button" id="researchMenuButton">Research</button>
-            <button type="button" onclick="showTab('town');" id="townMenuButton">Town</button>
-            <button type="button" onclick="showTab('missionControl');" id="missionControlMenuButton">Mission Control</button>
+            <button type="button" id="townMenuButton">Town</button>
+            <button type="button" id="missionControlMenuButton">Mission Control</button>
         </nav>
         <section id="subflex">
             <header> <!--Contains stats: Science, Money, etc.-->
