update moneyNum to gameState

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section id="subflex">
             <header> <!--Contains stats: Science, Money, etc.-->
                 <div>Science: <span id="scienceNum"></span></div>
-                <div>Money: <span id="moneyNum">100</span></div>
+                <div>Money: <span id="moneyNum"></span></div>
             </header>
             <main id="tabContainer"> <!--Where most of the action happens-->
                 <div class="tabcontents active" id="launch">
