added discord link

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body class="theme_default"> <!-- Change class with code to change theme. Theme-specific style rules will use body.theme_whatever in their selectors.-->
     <section id="mainflex">
         <nav> <!--Feature Menu-->
-            <button type="button" id="launchMenuButton">Mission Launch</button>
-            <button type="button" id="researchMenuButton">Research</button>
-            <button type="button" id="townMenuButton">Town</button>
-            <button type="button" id="missionControlMenuButton">Mission Control</button>
+            <button type="button" class="menuButton" id="launchMenuButton">Mission Launch</button>
+            <button type="button" class="menuButton" id="researchMenuButton">Research</button>
+            <button type="button" class="menuButton" id="townMenuButton">Town</button>
+            <button type="button" class="menuButton" id="missionControlMenuButton">Mission Control</button>
         </nav>
         <section id="subflex">
             <header> <!--Contains stats: Science, Money, etc.-->
@@ -77,7 +77,7 @@
     </section>
     <footer> <!--links and credits-->
         <a href="#">Credits</a>
-        <a href="#">Discord</a>
+        <a href="https://discord.gg/fgeMQkD" target="_blank">Discord</a>
         <a href="#">Wiki</a>
         <a href="#">Reddit</a>
     </footer>
