added class to menu buttons

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body class="theme_default"> <!-- Change class with code to change theme. Theme-specific style rules will use body.theme_whatever in their selectors.-->
     <section id="mainflex">
         <nav> <!--Feature Menu-->
-            <button type="button" id="launchMenuButton" data-tab="launch">Mission Launch</button>
-            <button type="button" id="researchMenuButton" data-tab="research">Research</button>
-            <button type="button" id="townMenuButton" data-tab="town">Town</button>
-            <button type="button" id="missionControlMenuButton" data-tab="missionControl">Mission Control</button>
+            <button type="button" class="menuButton" id="launchMenuButton" data-tab="launch">Mission Launch</button>
+            <button type="button" class="menuButton" id="researchMenuButton" data-tab="research">Research</button>
+            <button type="button" class="menuButton" id="townMenuButton" data-tab="town">Town</button>
+            <button type="button" class="menuButton" id="missionControlMenuButton" data-tab="missionControl">Mission Control</button>
         </nav>
         <section id="subflex">
             <header> <!--Contains stats: Science, Money, etc.-->
