launches have ongoing effects

--- a/index.html
+++ b/index.html
@@ -23,11 +23,9 @@
                 <div class="tabcontents active" id="launch">
                     <div>
                         <h3>Mission Stats</h3>
-                        Stats: ### <br />
-                        Stats: ### <br />
-                        Stats: ### <br />
-                        Stats: ### <br />
-                        Stats: ### <br />
+                        Launch cost: 1 <br />
+                        Science rate: 100/s <br />
+                        Duration: 5s <br />
                     </div>
                     <button type="button" id="launchButton">Launch!</button>
                     <ul>
