logo (looks better on dark background)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <!--<link rel="stylesheet" href="style/theme_default.css" type="text/css">-->
 </head>
 <body class="theme_default"> <!-- Change class with code to change theme. Theme-specific style rules will use body.theme_whatever in their selectors.-->
+    <section id="masthead">
+        <img src="gfx/logo.svg" id="logo" alt="Idlenauts logo"/>
+        <h1>Idlenauts</h1>
+    </section>
     <section id="mainflex">
         <nav> <!--Feature Menu-->
             <button type="button" class="menuButton" id="launchMenuButton" data-tab="launch">Mission Launch</button>
