load mission stats from json

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             </header>
             <main id="tabContainer"> <!--Where most of the action happens-->
                 <div class="tabcontents active" id="launch">
-                    <div>
+                    <div id="readyMissionStats">
                         <h3>Mission Stats</h3>
-                        Launch cost: 1 <br />
-                        Science rate: 1/s <br />
-                        Duration: 5s <br />
+                        Launch cost: xx<br />
+                        Science rate: xx<br />
+                        Duration: xx<br />
                     </div>
                     <button type="button" id="launchButton">Launch!</button>
                     <ul>
