Added town buttons

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                     <div id="moreInfo"><a href="#">Link to more information</a></div>
                 </div>
                 <div class="tabcontents" id="town">
+                    <!--<button type="button" class="townButton" id="BLANKTownButton" data-bldg="BLANKDetails">BLANK</button>
+                        <div class="bldgDetails" id="BLANKDetails">
+                            Building Details - BLANK
+                        </div>-->
                     <button type="button" class="townButton" id="gatherTownButton" data-bldg="gatherDetails">Gather Food</button>
                         <div class="bldgDetails" id="gatherDetails">
                             Building Details - Gather Food
@@ -46,21 +50,81 @@
                         <div class="bldgDetails" id="farmDetails">
                             Building Details - Farm
                         </div>
+                    <button type="button" class="townButton" id="verticalFarmTownButton" data-bldg="verticalFarmDetails">Vertical Farm</button>
+                        <div class="bldgDetails" id="verticalFarmDetails">
+                            Building Details - Vertical Farm
+                        </div>
+                    <button type="button" class="townButton" id="pastureTownButton" data-bldg="pastureDetails">Pasture</button>
+                        <div class="bldgDetails" id="pastureDetails">
+                            Building Details - Pasture
+                        </div>
+                    <button type="button" class="townButton" id="labGrownMeatLabTownButton" data-bldg="labGrownMeatLabDetails">Lab Grown Meat Lab</button>
+                        <div class="bldgDetails" id="labGrownMeatLabDetails">
+                            Building Details - Lab Grown Meat Lab
+                        </div>
                     <button type="button" class="townButton" id="constOfficeTownButton" data-bldg="constOfficeDetails">Construction Office</button>
                         <div class="bldgDetails" id="constOfficeDetails">
                             Building Details - Construction Office
+                        </div>
+                    <button type="button" class="townButton" id="granaryTownButton" data-bldg="granaryDetails">Granary</button>
+                        <div class="bldgDetails" id="granaryDetails">
+                            Building Details - Granary
+                        </div>
+                    <button type="button" class="townButton" id="freezerTownButton" data-bldg="freezerDetails">Freezer</button>
+                        <div class="bldgDetails" id="freezerDetails">
+                            Building Details - Freezer
+                        </div>
+                    <button type="button" class="townButton" id="stockpileTownButton" data-bldg="stockpileDetails">Stockpile</button>
+                        <div class="bldgDetails" id="stockpileDetails">
+                            Building Details - Stockpile
+                        </div>
+                    <button type="button" class="townButton" id="shedTownButton" data-bldg="shedDetails">Shed</button>
+                        <div class="bldgDetails" id="shedDetails">
+                            Building Details - Shed
+                        </div>
+                    <button type="button" class="townButton" id="warehouseTownButton" data-bldg="warehouseDetails">Warehouse</button>
+                        <div class="bldgDetails" id="warehouseDetails">
+                            Building Details - Warehouse
+                        </div>
+                    <button type="button" class="townButton" id="bunkHouseTownButton" data-bldg="bunkHouseDetails">Bunk House</button>
+                        <div class="bldgDetails" id="bunkHouseDetails">
+                            Building Details - Bunk House
+                        </div>
+                    <button type="button" class="townButton" id="brickHouseTownButton" data-bldg="brickHouseDetails">Brick House</button>
+                        <div class="bldgDetails" id="brickHouseDetails">
+                            Building Details - Brick House
+                        </div>
+                    <button type="button" class="townButton" id="luxuriousHouseTownButton" data-bldg="luxuriousHouseDetails">Luxurious House</button>
+                        <div class="bldgDetails" id="luxuriousHouseDetails">
+                            Building Details - Luxurious House
                         </div>
                     <button type="button" class="townButton" id="apartmentTownButton" data-bldg="apartmentDetails">Apartment</button>
                         <div class="bldgDetails" id="apartmentDetails">
                             Building Details - Apartment
                         </div>
-                    <button type="button" class="townButton" id="officeTownButton" data-bldg="officeDetails">Office</button>
-                        <div class="bldgDetails" id="officeDetails">
-                            Building Details - Office Building
+                    <button type="button" class="townButton" id="largeApartmentTownButton" data-bldg="largeApartmentDetails">Large Apartment</button>
+                        <div class="bldgDetails" id="largeApartmentDetails">
+                            Building Details - Large Apartment
+                        </div>
+                    <button type="button" class="townButton" id="lumberYardTownButton" data-bldg="lumberYardDetails">Lumber Yard</button>
+                        <div class="bldgDetails" id="lumberYardDetails">
+                            Building Details - Lumber Yard
+                        </div>
+                    <button type="button" class="townButton" id="treeNurseryTownButton" data-bldg="treeNurseryDetails">Tree Nursery</button>
+                        <div class="bldgDetails" id="treeNurseryDetails">
+                            Building Details - Tree Nursery
+                        </div>
+                    <button type="button" class="townButton" id="quarryTownButton" data-bldg="quarryDetails">Quarry</button>
+                        <div class="bldgDetails" id="quarryDetails">
+                            Building Details - Quarry
                         </div>
                     <button type="button" class="townButton" id="mineTownButton" data-bldg="mineDetails">Mine</button>
                         <div class="bldgDetails" id="mineDetails">
                             Building Details - Mine
+                        </div>
+                    <button type="button" class="townButton" id="smelterTownButton" data-bldg="smelterDetails">Smelter</button>
+                        <div class="bldgDetails" id="smelterDetails">
+                            Building Details - Smelter
                         </div>
                 </div>
                 <div class="tabcontents" id="missionControl">
