More Town button additions

--- a/index.html
+++ b/index.html
@@ -52,6 +52,22 @@
                         <div class="bldgDetails" id="constOfficeDetails">
                             Building Details - Construction Office
                         </div>
+                    <button type="button" class="townButton" id="immigrationOfficeTownButton" data-bldg="immigrationOfficeDetails">Immigration Office</button>
+                        <div class="bldgDetails" id="immigrationOfficeDetails">
+                            Building Details - Immigration Office
+                        </div>
+                    <button type="button" class="townButton" id="libraryTownButton" data-bldg="libraryDetails">Library</button>
+                        <div class="bldgDetails" id="libraryDetails">
+                            Building Details - Library
+                        </div>
+                    <button type="button" class="townButton" id="academyTownButton" data-bldg="academyDetails">Academy</button>
+                        <div class="bldgDetails" id="academyDetails">
+                            Building Details - Academy
+                        </div>
+                    <button type="button" class="townButton" id="universityTownButton" data-bldg="universityDetails">University</button>
+                        <div class="bldgDetails" id="universityDetails">
+                            Building Details - University
+                        </div>
                     <button type="button" class="townButton" id="granaryTownButton" data-bldg="granaryDetails">Granary</button>
                         <div class="bldgDetails" id="granaryDetails">
                             Building Details - Granary
@@ -111,6 +127,22 @@
                     <button type="button" class="townButton" id="smelterTownButton" data-bldg="smelterDetails">Smelter</button>
                         <div class="bldgDetails" id="smelterDetails">
                             Building Details - Smelter
+                        </div>
+                        <button type="button" class="townButton" id="coalPowerPlantTownButton" data-bldg="coalPowerPlantDetails">Coal Power Plant</button>
+                        <div class="bldgDetails" id="coalPowerPlantDetails">
+                            Building Details - Coal Power Plant
+                        </div>
+                        <button type="button" class="townButton" id="windTurbineTownButton" data-bldg="windTurbineDetails">Wind Turbine</button>
+                        <div class="bldgDetails" id="windTurbineDetails">
+                            Building Details - Wind Turbine
+                        </div>
+                        <button type="button" class="townButton" id="tidalCurrentTurbineTownButton" data-bldg="tidalCurrentTurbineDetails">Tidal Current Turbine</button>
+                        <div class="bldgDetails" id="tidalCurrentTurbineDetails">
+                            Building Details - Tidal Current Turbine
+                        </div>
+                        <button type="button" class="townButton" id="nuclearPowerPlantTownButton" data-bldg="nuclearPowerPlantDetails">Nuclear Power Plant</button>
+                        <div class="bldgDetails" id="nuclearPowerPlantDetails">
+                            Building Details - Nuclear Power Plant
                         </div>
                 </div>
                 <div class="tabcontents" id="research">
