partial fix checkbox width

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <hr>
                                 <div style="width: 100%; display: table;">Build with upgrades:
                                     <div style="display: table-row;">
-                                        <div style="display: table-cell;">
+                                        <div style="display: table-cell; width: 1px;">
                                             <input type="checkbox" id="farmIrrigationBuildWith" name="farmIrrigationBuildWith" value="Irrigation">
                                         </div>
                                         <div style="display: table-cell;">
@@ -68,7 +68,7 @@
                                         </div>
                                     </div>
                                     <div style="display: table-row;">
-                                        <div style="display: table-cell;">
+                                        <div style="display: table-cell; width: 1px;">
                                             <input type="checkbox" id="farmSiloBuildWith" name="farmSiloBuildWith" value="silo">
                                         </div>
                                         <div style="display: table-cell;">
