Changed default screen to Town

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div>Money: <span id="moneyNum"></span></div>
             </header>
             <main id="tabContainer"> <!--Where most of the action happens-->
-                <div class="tabcontents" id="town">
+                <div class="tabcontents active" id="town">
                     <!--<button type="button" class="townButton" id="BLANKTownButton" data-bldg="BLANKDetails">BLANK</button>
                         <div class="bldgDetails" id="BLANKDetails">
                             Building Details - BLANK
@@ -209,7 +209,7 @@
                 <div class="tabcontents" id="missionControl">
                     <button type="button">spam</button>
                 </div>
-                <div class="tabcontents active" id="launch">
+                <div class="tabcontents" id="launch">
                     <div id="readyMissionStats">
                             <h3>Mission Stats</h3>
                             Launch cost: xx<br />
